k8s/cat-nip.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cat

---

apiVersion: v1
kind: Service
metadata:
  name: catnip
  namespace: cat
  labels:
    app: catnip
    distribution: ui
    system: cat
spec:
  selector:
    app: catnip
    distribution: ui
    system: cat
  ports:
  - name: http
    port: 80
    targetPort: 8087
    protocol: TCP

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: catnip
  namespace: cat
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: catnip.kearos.net
    http:
      paths:
      - path: /
        backend:
          serviceName: catnip
          servicePort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: catnip
  namespace: cat
  labels:
    app: catnip
    distribution: ui
    system: cat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catnip
      distribution: ui
      system: cat
  template:
    metadata:
      labels:
        app: catnip
        distribution: ui
        system: cat
    spec:
      containers:
      - name: catnip
        image: caladreas/catnip-master
        imagePullPolicy: Always
        ports:
        - containerPort: 8087
        resources:
          limits:
            memory: "20Mi"
            cpu: 0.1
          requests:
            memory: "20Mi"
            cpu: 0.1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8087
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
